update eng-fre selection

--- a/Web/Pages/CCGMember/AllPositions.cshtml
+++ b/Web/Pages/CCGMember/AllPositions.cshtml
@@ -1,4 +1,4 @@
-﻿@page ""
+﻿@page 
 @inject IViewLocalizer Localizer
 @model Web.Pages.CCGMember.AllPositionsModel
 @using Microsoft.AspNetCore.Http
