--- a/Web/Pages/CCGMember/CurrentLevel.cshtml
+++ b/Web/Pages/CCGMember/CurrentLevel.cshtml
@@ -4,12 +4,22 @@
 @inject IHttpContextAccessor contextAccessor
 @inject IViewLocalizer Localizer
 @{
-    //var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
+    var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
     var id = Model.id;
-    var jobPositions = Model.JobGroupPositions;
+    var jobGroupPositions = Model.JobGroupPositions;
     var levels = new List<string>();
+    var JobGroupCode = Model.JobGroup.Code;
+    var JobGroupName = "";
+    if (isEnglish)
+    {
+        JobGroupName = Model.JobGroup.NameEng;
+    }
+    else
+    {
+        JobGroupName = Model.JobGroup.NameFre;
+    }
 
-    foreach (var jp in jobPositions)
+    foreach (var jp in jobGroupPositions)
     {
         levels.Add(jp.LevelValue);
     }
@@ -22,25 +32,25 @@
 <h2><b>@Localizer["h2Text"]</b></h2>
 
 <figure><img src="~/img/CCGMember/Positions-full.jpg" alt="Photo of " class="img-responsive thumbnail mrgn-bttm-sm" /></figure>
-<h3><b>@Model.JobGroup.NameEng (@Model.JobGroup.Code)</b></h3>
+<h3><b>@JobGroupName (@JobGroupCode)</b></h3>
 <div class="dropdown">
     <div class="col-sm-3">
-        <label><b>Level</b></label><br />
+        <label><b>@Localizer["Level"]</b></label><br />
         <button class="dropdown-toggle" id="menu1" type="button" data-toggle="dropdown">
-            Select Level
+            @Localizer["Select Level"]
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
             @foreach (var level in levelsd)
             {
-                var data = new Dictionary<string, string>
-        {
-           { "id",  id.ToString()},
-           { "level",  level}
-        };
+                var routedata = new Dictionary<string, string>
+                        {
+                              { "id",  id.ToString()},
+                              { "level",  level}
+                         };
         <li role="presentation">
             <a role="menuitem" tabindex="-1"
-               asp-page="CurrentPosition" asp-all-route-data="data">Level @level</a>
+               asp-page="CurrentPosition" asp-all-route-data="routedata">@Localizer["Level"] @level</a>
         </li>
     }
         </ul>
@@ -52,7 +62,6 @@
                 <h2 class="wb-inv">Document navigation</h2>
                 <ul class="pager">
                     <li class="previous"><a asp-page="AllPositions">@Localizer["Previous"]</a></li>
-                    <li class="next"><a asp-page="Compare/SearchType" asp-route-id="@Model.level">@Localizer["Next"]</a></li>
                 </ul>
             </nav>
         </div>
